[gd_scene load_steps=11 format=2]

[ext_resource path="res://sounds/demo01 - Jumpy/Jumpy-Bass.ogg" type="AudioStream" id=1]
[ext_resource path="res://sounds/demo01 - Jumpy/Jumpy-Beat01.ogg" type="AudioStream" id=2]
[ext_resource path="res://sounds/demo01 - Jumpy/Jumpy-MainRiff.ogg" type="AudioStream" id=3]
[ext_resource path="res://sounds/demo01 - Jumpy/Jumpy-Melody.ogg" type="AudioStream" id=4]
[ext_resource path="res://ui/Montserrat-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sounds/demo01 - Jumpy/Jumpy-Beat02.ogg" type="AudioStream" id=6]
[ext_resource path="res://Tempo.tscn" type="PackedScene" id=7]
[ext_resource path="res://sounds/demo01 - Jumpy/Jumpy-Beat03.ogg" type="AudioStream" id=8]
[ext_resource path="res://JumpyMusic.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[node name="JumpyMusic" type="Node"]
script = ExtResource( 9 )

[node name="MainRiff" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Beat01" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Beat02" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Beat03" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Melody" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Bass" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="MarginContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tempo" parent="MarginContainer" instance=ExtResource( 7 )]
position = Vector2( -100, -100 )
bpm = 150
debug_bgm = false
quart_sound = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 802.0
margin_top = 279.0
margin_right = 918.0
margin_bottom = 601.0
custom_constants/separation = 20
alignment = 1

[node name="BTN_MainRiff" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 116.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Main Riff"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BTN_Beat01" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 57.0
margin_right = 116.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 1 )
text = "Beat 01"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BTN_Beat02" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 116.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 1 )
text = "Beat 02"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BTN_Beat03" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 116.0
margin_bottom = 208.0
custom_fonts/font = SubResource( 1 )
text = "Beat 03"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BTN_Melody" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 116.0
margin_bottom = 265.0
custom_fonts/font = SubResource( 1 )
text = "Melody"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BTN_Bass" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 285.0
margin_right = 116.0
margin_bottom = 322.0
custom_fonts/font = SubResource( 1 )
text = "Bass"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/VBoxContainer/BTN_MainRiff" to="." method="_on_BTN_MainRiff_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BTN_Beat01" to="." method="_on_BTN_Beat01_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BTN_Beat02" to="." method="_on_BTN_Beat02_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BTN_Beat03" to="." method="_on_BTN_Beat03_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BTN_Melody" to="." method="_on_BTN_Melody_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BTN_Bass" to="." method="_on_BTN_Bass_pressed"]
